Issue #ED-2610 fix: Export button alignement and custom error msg fix in program dashboard

--- a/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
+++ b/src/app/client/src/app/modules/program-dashboard/components/program-datasets/program-datasets.component.scss
@@ -102,7 +102,10 @@
 }
 
 ::ng-deep {
-  
+  .exportBtn .mat-form-field-wrapper {
+      float: right;
+  }
+
   .cdk-overlay-container{
     z-index: 9 !important;
   }
